# ethers_aws

./: Cargo.toml  README.md
examples/advanced_example/: Cargo.toml
examples/simple_example/: Cargo.toml
examples/simple_example/src/: main.rs
src/: aws_signer.rs  lib.rs
src/aws_signer/: aws_signer_error.rs  utils.rs
